avoid horizontal scrolling on mobile devices

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -22,6 +22,7 @@ q-page {
     .q-page-container {
         margin-left: 0;
         margin-right: 0;
+        overflow-x: hidden;
     }
 }
 
